Fix bugs
- Remove unused css styles
- Add extra space above "Best departing flights"

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -51,12 +51,6 @@ body {
   height: 50px;
 }
 
-.vr {
-  width: 2px;
-  opacity: 0.75;
-  height: 1.5em;
-}
-
 @media (min-width: 768px) {
   .flight-search {
     height: 100vh;
